# eeditor

./: .gitignore  LICENSE  Makefile  ajax.php  atlas-1.json  index.php  misc.php
css/: editor.css
docker/: Dockerfile  docker-compose.yml
editor/: EditFieldsWithKitten.js  EditorEventsWithKitten.js  EditorServerWithKitten.js  EditorUIBehavioursWithKitten.js  EditorWithKitten.js  HistoryWithKitten.js  LayoutWithKitten.js  MiscWithKitten.js  NodeEditWithKitten.js  ProjectWithKitten.js  StateWithKitten.js
editor/behaviours/: AnimationsWithKitten.js  AskerWithKitten.js  BatchLayoutProcessingWithKitten.js  CameraMoveWithKitten.js  ColorPickerWithKitten.js  ContextMenuWithKitten.js  CustomPanelWithKitten.js  FAQWithKitten.js  FileManagerWithKitten.js  FilePanelWithKitten.js  GraphWithKitten.js  HierarchyWithKitten.js  KeyHelperWithKitten.js  LinkWithKitten.js  NavWithKitten.js  PanelsWithKitten.js  ParticlesWithKitten.js  ProjectSettingsWithKitten.js  ProjectTargetsPanelWithKitten.js  RenderInfoWithKitten.js  SomeNodePreviewsWithKitten.js  SpineWithKitten.js  StartPageWithKitten.js  TooltipsWithKitten.js  TreeWithKitten.js  UniformsWithKitten.js
engine/: basicTypes.js  bus.js  camera.js  clipboard.js  cubismFactory.js  dragonBonesFactory.js  engine.js  events.js  globals.js  html.js  loadtasks.js  localization.js  lottieFactory.js  node.js  object3d.js  particles.js  renderer.js  shadow.js  sound.js  spineFactory.js  text.js  timer.js  tweens.js  wfont.js  windows.js
engine/3d/: 3d.js  FBXLoader.js  shaders.js  types.js
layouts/: theme_DarkSimple.json  ui.json
plugins/: combiner.js  helpers.js  matter.js  physics.js  quadSelector.js  renderInfo.js  renderOverTexture.js  shaderEditor.js  shaderToy.js
shaders/: __parallaxMappingOcclusion.f  __parallaxMappingOcclusion.v  __parallaxMappingOcclusion2.f  __parallaxMappingOcclusion2.v  __textureMixing1.f  addSceneVel.f  base.f  base_n.f  base_xgen.v  base_xgenc.v  bc.f  bc.v  blur.f  c.f  c_alpha.f  c_blue.f  c_green.f  c_red.f  cardGlass.f  cardGlass.v  colorize.f  copy.f  corners.f  dashed.f  dashed.v  dream.f  effect_blur2.f  effect_blur4.f  effect_blur5.f  effect_blur_focus.f  effect_geomMix.f  effect_mix2.f  effect_mix4.f  erosion.f  fade.f  flower.f  flowxa.f  flowy.f  flowysmoke.f  fluid.f  (+45 more)
tools/: builder.js  create-new-room-previews.js  create-room-previews.js  file-iterate.js  node-data-cache.js  nodejs_remote_console_server.js  unwind.js
tools/TexturePacker/: CMakeLists.txt  Makefile  README  TexturePacker
tools/TexturePacker/src/: AbstractBinPack.h  GuillotineBinPack.cpp  GuillotineBinPack.h  MaxRectsBinPack.cpp  MaxRectsBinPack.h  Rect.cpp  Rect.h  ShelfBinPack.cpp  ShelfBinPack.h  SkylineBinPack.cpp  SkylineBinPack.h  getopt.h  main.cpp  msc_dirent.h
tools/TexturePacker/src/json/: CMakeLists.txt  json.h  utf8.cpp  utf8.h  value.cpp  value.h
tools/atlas_unpacker/: atlas_unpacker.js  package.json
tools/castl/: castl.js  package-lock.json  package.json
tools/misc/: index.js
tools/node-minify/: index.js
tools/node-minify/lib/: node-minify.js
tools/soundsprite/: LICENSE  README.md  package.json  soundsprite.js
tools/soundsprite/test/: test.js
tools/winston/lib/: winston.js
